FlowTeam/force-app/main/default/objects/ProjectLineItem__c/fields/Assign_Hours__c.field-meta.xml
<CustomField>
    <fullName>Assign_Hours__c</fullName>
    <label>Assign Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>