FlowTeam/force-app/main/default/objects/ProjectLineItem__c/fields/Hours_Pending__c.field-meta.xml
<CustomField>
    <fullName>Hours_Pending__c</fullName>
    <formula>Quantity_Hs__c  -  Assign_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>