FlowTeam/force-app/main/default/objects/ProjectLineItem__c/fields/Quantity_Hs__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Hs__c</fullName>
    <label>Quantity(Hs)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>