FlowTeam/force-app/main/default/objects/ProjectLineItem__c/fields/TotalCostxRol__c.field-meta.xml
<CustomField>
    <fullName>TotalCostxRol__c</fullName>
    <formula>Assign_Hours__c  * CASE(Rol__c , &quot;Developer&quot;, 30, &quot;Architect&quot;, 60, &quot;Consultant&quot;,50, &quot;Project Manager&quot;,40,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalCostxRol</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>