FlowTeam/force-app/main/default/objects/ProjectLineItem__c/fields/TotalHoursCovered__c.field-meta.xml
<CustomField>
    <fullName>TotalHoursCovered__c</fullName>
    <formula>IF( Assign_Hours__c  &gt;=  Quantity_Hs__c , &quot;True&quot;, &quot;False&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalHoursCovered</label>
    <type>Text</type>
</CustomField>