FlowTeam/force-app/main/default/objects/ProjectLineItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Rol__c</columns>
    <columns>Quantity_Hs__c</columns>
    <columns>Assign_Hours__c</columns>
    <columns>Hours_Pending__c</columns>
    <columns>TotalCostxRol__c</columns>
    <columns>TotalHoursCovered__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>