FlowTeam/force-app/main/default/objects/ProjectLineItem__c/listViews/Projects_Line_Item_List.listView-meta.xml
<ListView>
    <fullName>Projects_Line_Item_List</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <filterScope>Mine</filterScope>
    <label>Projects Line Item List</label>
</ListView>